# flink-agents-demos

./: .asf.yaml  .gitignore  NOTICE  README.md
flink-operations-agent-demo/: .gitignore  README.md  docker-compose.yml
flink-operations-agent-demo/operations-agent-job/: custom_types_and_prompts.py  operations_agent.py  operations_agent_main.py  pyproject.toml
flink-operations-agent-demo/operations-agent-job/tools/: operations_agent_tools.py  problem_diagnosis_tools.py  problem_identification_tools.py  problem_remedy_tools.py  tool_utils.py
flink-operations-agent-demo/sample-jobs/: pom.xml
flink-operations-agent-demo/sample-jobs/src/main/java/org/apache/flink/sample/jobs/: BackPressuredCatchingUpJob.java  BackPressuredJob.java  FailedStartupJob.java  NormalJob.java  TimestampDataGenerator.java
flink-operations-agent-demo/sample-jobs/src/main/java/org/apache/flink/sample/jobs/excluded/: ExcludedDependency.java
flink-operations-agent-demo/sop/: job_back_pressure.md  job_failed_to_start.md
